--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.0.0",
     "angular-datatables": "^17.0.0",
     "angular-highcharts": "^16.0.0",
+    "angularx-qrcode": "^17.0.0",
     "bootstrap-icons": "^1.11.3",
     "datatables.net": "^1.11.3",
     "datatables.net-dt": "^1.11.3",
